--- a/styles/layout/layout.module.scss
+++ b/styles/layout/layout.module.scss
@@ -3,5 +3,6 @@ background-color: #12001A;
 position: fixed;
   top: 0;
   left: 0;
+  right: 0;
   overflow: hidden;
 }
